--- a/Display_Data/Web.config
+++ b/Display_Data/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="AmratConnectionString" connectionString="Data Source=RANIGUNJSERVER\SQLSERVER;Initial Catalog=Amrat;Integrated Security=True"
+    <add name="AmratConnectionString" connectionString="Data Source=DESKTOP-CEI1CUN\SQLEXPRESS;Initial Catalog=Amrat;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="CustomersConnectionString" connectionString="Data Source=RANIGUNJSERVER\SQLSERVER;Initial Catalog=Customers;Integrated Security=True"
+    <add name="CustomersConnectionString" connectionString="Data Source=DESKTOP-CEI1CUN\SQLEXPRESS;Initial Catalog=Customers;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
